Fixed scroll bars (overflow)

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,9 @@
   overflow:auto;
   /* border: solid 1px green; */
 }
+.container::-webkit-scrollbar {
+  display: none;
+}
 
 
 .navbarLink {
